fix(signpost): use correct trigger icon size and align padding (#935)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-924

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -1279,23 +1279,28 @@
   --clr-signpost-content-bg-color: #{tokens.$cds-alias-object-container-background}; // var(--clr-color-neutral-0);
   --clr-signpost-content-border-color: #{tokens.$cds-alias-object-interaction-border-color}; // var(--clr-color-neutral-500);
 
-  --clr-signpost-action-icon-dimension: #{tokens.$cds-global-space-0}; // to be removed when shim is fully integrated
+  --clr-signpost-action-icon-size: #{tokens.$cds-global-space-9}; // to be removed when shim is fully integrated
   --clr-signpost-action-color: #{tokens.$cds-alias-object-interaction-color}; // var(--clr-color-neutral-600);
   --clr-signpost-action-icon-color: var(--clr-signpost-action-color);
   --clr-signpost-action-hover-color: #{tokens.$cds-alias-object-interaction-color-hover}; // var(--clr-color-action-700);
   --clr-signpost-action-active-color: #{tokens.$cds-alias-object-interaction-color-active}; // var(--clr-color-action-700);
+  --clr-signpost-padding: #{tokens.$cds-global-space-7}; // ATM - set as default
+  --clr-signpost-gap-size: #{tokens.$cds-global-space-5}; // ATM - set as default
   --clr-signpost-content-header-position: static;
-  --clr-signpost-content-header-padding: #{tokens.$cds-global-space-7} #{tokens.$cds-global-space-7} #{tokens.$cds-global-space-5};
 
   // NOTE: I had to use hardcoded border size value in order to avoid sass variables
   --clr-signpost-border-size: #{tokens.$cds-global-space-6};
   --clr-signpost-pointer-border: var(--clr-signpost-border-size) solid var(--clr-signpost-content-border-color);
   --clr-signpost-pointer-psuedo-border: var(--clr-signpost-border-size) solid var(--clr-signpost-content-bg-color);
   --clr-signpost-border-radius: #{tokens.$cds-alias-object-border-radius-100};
-  --clr-signpost-content-padding: #{tokens.$cds-global-space-0} #{tokens.$cds-global-space-7} #{tokens.$cds-global-space-7};
   --clr-signpost-content-close-button-line-height: 0;
-  --clr-signpost-content-close-button-dimensions: #{tokens.$cds-global-space-7};
-  --clr-signpost-content-close-icon-dimensions: #{tokens.$cds-global-space-7};
+  --clr-signpost-content-close-button-size: #{tokens.$cds-global-space-7}; // ATM - set as default
+  --clr-signpost-content-close-icon-size: #{tokens.$cds-global-space-7}; // ATM - set as default
+
+  // ATM - set as default
+  .signpost-content-body {
+    padding: 0;
+  }
 
   /* StackView */
 
